<resources>
    <string name="app_name">NoteToGokhanSoyalp</string>
    <string name="film_db">Movie Database</string>
    <string name="item_name">name</string>
    <string name="item_genre">genre</string>
    <string name="item_imdb">imdb</string>
    <string name="item_lang">language</string>

    //Add Film
    <string name="add_new_movie">Add New Movie</string>
    <string name="add_name">Film Name</string>
    <string name="add_genre">Film Genre</string>
    <string name="add_imdb_point">IMDB Point</string>
    <string name="add_languages">Film Language</string>
    <string name="film_info">Movie Information</string>

    //Add Screen Button
    <string name="button_add">ADD</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_done">DONE</string>

    <string name="save_settings">Save Settings</string>
    <string name="settings">Settings</string>
    <string name="change_lang">Change Language</string>
    <string name="choose_lang">Choose Language</string>

    // Languages
    <string name="en">English</string>
    <string name="tr">Turkish</string>
    <string name="es">Spanish</string>
</resources>