<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/layout_item_padding">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="@dimen/text_padding"
        android:paddingRight="@dimen/text_padding"
        android:text="@string/item_name"
        android:textColor="#FDFBFB"
        android:textSize="@dimen/tv_text_size_title" />

    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="@dimen/text_padding"
        android:paddingRight="@dimen/text_padding"
        android:text="@string/item_genre"
        android:textColor="#FDFBFB"
        android:textSize="@dimen/tv_text_size_sub" />

    <TextView
        android:id="@+id/tv_imdb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="@dimen/text_padding"
        android:paddingRight="@dimen/text_padding"
        android:text="@string/item_imdb"
        android:textColor="#FDFBFB"
        android:textSize="@dimen/tv_text_size_sub" />

    <TextView
        android:id="@+id/tv_lang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="@dimen/text_padding"
        android:paddingRight="@dimen/text_padding"
        android:text="@string/item_lang"
        android:textColor="#FDFBFB"
        android:textSize="@dimen/tv_text_size_sub" />

</LinearLayout>